配置生产环境

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="http://192.168.10.182:8031/target/target-script-min.js#anonymous"></script>   
+    <!--<script src="http://192.168.10.182:8031/target/target-script-min.js#anonymous"></script>   -->
   </head>
   <body>
     <noscript>
